# pms

./: .gdbinit  .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  ChangeLog  INSTALL  LICENSE  Makefile  Makefile.am  README  README.md  TODO  ciabot.pl  code_of_conduct.md  config.h.in.cmake  config.md  configure.ac  go.mod  go.sum  index.html  indexing.md  install.sh  main.go  params.json  pms.1  rebuild.sh  testpms
.github/workflows/: build.yml
api/: api.go  interface.go  test_api.go
bufin/: bufin.go
cmake/: FindNcursesw.cmake  Manpage.cmake
cmd/visp/: visp.go
cmd/visp-oauth/: main.go
commands/: add.go  add_test.go  api.go  auth.go  bind.go  bind_test.go  clear.go  columns.go  command.go  cursor.go  cursor_test.go  cut.go  cut_test.go  device.go  inputmode.go  isolate.go  isolate_test.go  list.go  next.go  paste.go  paste_test.go  pause.go  play.go  play_test.go  previous.go  print.go  quit.go  redraw.go  remove.go  remove_test.go  seek.go  seek_test.go  select.go  select_test.go  set.go  set_test.go  show.go  single.go  single_test.go  sort.go  (+15 more)
config/: config.go
console/: console.go
constants/: constants.go
db/: db.go  list.go
doc/: Makefile  Makefile.am  README.md  commands.md  data-model-refactor.md  intro.md  manpage.md  mpd.md  options.md  pms.md  release-notes-0.99.0.md  styling.md  visp.md
examples/: README  rc.ambientsound  rc.tremby
history/: history.go
index/: index.go  mapping.go
index/filters/unicodestrip/: unicodestrip.go
index/song/: song.go
input/: interface.go  interface_test.go  interpreter.go  interpreter_test.go  lexer.go  lexer_test.go
input/actions/: set.go  set_test.go
input/commands/: add.go  api.go  bind.go  command.go  commands.go  cursor.go  inputmode.go  isolate.go  list.go  next.go  pause.go  play.go  previous.go  quit.go  redraw.go  remove.go  select.go  set.go  set_test.go  sort.go  stop.go  style.go  volume.go
input/keys/: keys.go  keys_test.go
input/lexer/: lexer.go  lexer_test.go  lexluthor.go  lexluthor_test.go
input/parser/: keynames.go  keysequence.go  keysequence_test.go  parser.go  set.go  set_test.go
keysequence/: keysequence.go  names.go  parser.go  parser_test.go
list/: cells.go  collection.go  column.go  column_test.go  columns.go  cursor.go  list.go  list_test.go  selection.go
log/: file.go  level.go  list.go  log.go  log_test.go  message.go  message_test.go
m4/: ChangeLog
message/: message.go
mpd/: playerstatus.go
multibar/: history.go  mode.go  multibar.go
options/: bool.go  defaults.go  int.go  options.go  options_test.go  string.go
parser/: parser.go
player/: state.go
pms/: config.go  connection.go  main.go  playerstatus.go  pms.go  setup.go
po/: ChangeLog  Makefile  POTFILES  POTFILES.in  default.mo  default.po
prog/: api.go  prog.go
song/: song.go  song_test.go
songlist/: collection.go  columns.go  cursor.go  library.go  queue.go  selection.go  songlist.go
spotify/aggregator/: aggregator.go
spotify/albums/: list.go  utils.go
spotify/auth/: auth.go  jsonrender.go
spotify/devices/: devices.go
spotify/list/: list.go
spotify/localauth/: auth.go
spotify/playlists/: list.go
spotify/proxyclient/: proxyclient.go
spotify/proxyserver/: jsonrender.go  proxyserver.go
spotify/tracklist/: list.go  utils.go
src/: ChangeLog  Makefile.am  action.cpp  action.h  build.h.in  clipboard.cpp  clipboard.h  color.cpp  color.h  column.h  command.cpp  command.h  config.cpp  config.h  conn.cpp  conn.h  console.cpp  console.h  curses.cpp  curses.h  debug.cpp  debug.h  display.cpp  display.h  display.old.cpp  display2.h  error.cpp  error.h  field.cpp  field.h  fields.h  filter.h  i18n.h  input.cpp  input.h  keybinding.cpp  libmpdclient.c  libmpdclient.h  library.cpp  library.h  (+43 more)
style/: style.go  style_test.go  styled.go
tabcomplete/: tabcomplete.go  tabcomplete_test.go
term/: canvas.go  key.go  keypress.go  keypress_test.go  sampler.go  sampler_test.go  style.go  style_test.go
tokencache/: tokencache.go
topbar/: artist.go  audioformat.go  audioformat_test.go  device.go  elapsed.go  fragment.go  list.go  mode.go  parser.go  shortname.go  state.go  tag.go  text.go  time.go  title.go  topbar.go  topbar_test.go  version.go  volume.go
utils/: utils.go
version/: version.go
widgets/: canvas.go  column.go  columnheaders.go  columns.go  columns_test.go  console.go  container.go  events.go  list.go  multibar.go  playbar.go  songlist.go  table.go  topbar.go  ui.go  widget.go
xdg/: xdg.go
